# topal

./: .gitignore  Cargo.toml  README.rst  containers.md  environments.md  errors.md  generators.md  goals.md  introspection.md  layouts.md  modules.md  numbers.md  ranges.md  resources.md  serialization.md  strings.md  syntax.md  tasks.md  testing.md  units.md
docs/: Makefile  background.rst  conf.py  core_language.rst  design_decisions.rst  index.rst  lexer.ebnf  make.bat  parser.ebnf  requirements.txt  type_theory.rst
src/: hello_world.rs  lib.rs  location.rs  main.rs  object_storage.rs  parseable.rs  stream.rs  streamreader.rs
src/streamreader/: charpos.rs  curl_reader.rs  stream.rs
