[package]
name = "topal"
version = "0.1.0"
edition = "2021"
features = ["buf_read_has_data_left"]

[dependencies]
lyn = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
curl = "0.4.44"
crossbeam-channel = "0.5"
clap = { version = "4.4.7", features = ["cargo", "derive"] }
utf8-chars = "3.0.1"
url = "2.4.1"

